--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+		<div class="container">
+			<a href="#" class="navbar-brand">Inicio</a>
+				 <ul class="nav navbar-nav">
+       				<li class="active"> <%= link_to "Status", statuses_path %></li>
+		</div>
+
+
+</div>
+	<div class="container"> 
+		<%= yield %>
+	</div>
 
 </body>
 </html>
