--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
 		<div class="container">
 			<a href="#" class="navbar-brand">Inicio</a>
 				 <ul class="nav navbar-nav">
-       				<li class="active"> <%= link_to "Status", statuses_path %></li>
+       				<li class="active"> <%= link_to "Clausulas", statuses_path %></li>
 		</div>
 
 
 </div>
 	<div class="container"> 
+		<p class="notice"><%= notice %></p>
+		<p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
